--- a/je_maintiendrai_nationalfocus/localisation/countries_cosmetic_l_english.yml
+++ b/je_maintiendrai_nationalfocus/localisation/countries_cosmetic_l_english.yml
@@ -230,4 +230,16 @@
  Je_Maintiendrai_UKNL_communism:0 "Union of the Netherlands"
  Je_Maintiendrai_UKNL_communism_ADJ:0 "Dutch"
  Je_Maintiendrai_UKNL_communism_DEF:0 "Union of the Netherlands"
+ Je_Maintiendrai_Brussel_fascism:0 "Vrij België"
+ Je_Maintiendrai_Brussel_fascism_ADJ:0 "Belgian"
+ Je_Maintiendrai_Brussel_democratic:0 "Vrije Stad Brussel"
+ Je_Maintiendrai_Brussel_democratic_ADJ:0 "Brusselian"
+ Je_Maintiendrai_Brussel_communism:0 "Vrije Soviet Stad Brussel"
+ Je_Maintiendrai_Brussel_communism_ADJ:0 "Brusselian"
+ Je_Maintiendrai_Bruxelles_fascism:0 "Libre Belgique"
+ Je_Maintiendrai_Bruxelles_fascism_ADJ:0 "Belge"
+ Je_Maintiendrai_Bruxelles_democratic:0 "Ville libre de Bruxelles"
+ Je_Maintiendrai_Bruxelles_democratic_ADJ:0 "Bruxelles"
+ Je_Maintiendrai_Bruxelles_communism:0 "Ville soviétique libre de Bruxelles"
+ Je_Maintiendrai_Bruxelles_communism_ADJ:0 "soviétique Bruxelles"
  
